...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/but"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:background="@color/black"
        android:fontFamily="serif"
        android:text="add tasks"
        app:layout_constraintBottom_toBottomOf="parent"
...
